# mpu

background/dpdk/: readme.md
background/ebpf/: readme.md
background/syscall/: readme.md
dpu/dependence/: fasthash.c  fasthash.h
dpu/ex1/: ex1_results.txt  meson.build
dpu/ex1/cbf/: sketch_cbf_1.c  sketch_cbf_2.c  sketch_cbf_3.c  sketch_cbf_4.c  sketch_cbf_5.c  sketch_cbf_6.c  sketch_cbf_7.c  sketch_cbf_8.c
dpu/ex1/cm/: sketch_cm_2.c  sketch_cm_3.c  sketch_cm_4.c  sketch_cm_5.c  sketch_cm_6.c  sketch_cm_7.c  sketch_cm_8.c
dpu/ex1/cs/: sketch_cs_1.c  sketch_cs_2.c  sketch_cs_3.c  sketch_cs_4.c  sketch_cs_5.c  sketch_cs_6.c  sketch_cs_7.c  sketch_cs_8.c
dpu/ex1/es/: sketch_es_1.c  sketch_es_2.c  sketch_es_3.c  sketch_es_4.c  sketch_es_5.c  sketch_es_6.c  sketch_es_7.c  sketch_es_8.c
dpu/ex1/fr/: sketch_fr_1.c  sketch_fr_2.c  sketch_fr_3.c  sketch_fr_4.c  sketch_fr_5.c  sketch_fr_6.c  sketch_fr_7.c  sketch_fr_8.c
dpu/ex1/nitro/: sketch_nitro_1.c  sketch_nitro_2.c  sketch_nitro_3.c  sketch_nitro_4.c  sketch_nitro_5.c  sketch_nitro_6.c  sketch_nitro_7.c  sketch_nitro_8.c
dpu/ex1/skv/: sketch_skv_1.c  sketch_skv_2.c  sketch_skv_3.c  sketch_skv_4.c  sketch_skv_5.c  sketch_skv_6.c  sketch_skv_7.c  sketch_skv_8.c
dpu/ex1/um/: sketch_um_1.c  sketch_um_2.c  sketch_um_3.c  sketch_um_4.c  sketch_um_5.c  sketch_um_6.c  sketch_um_7.c  sketch_um_8.c
dpu/ex3/: ex3_results.txt  meson.build
model/: sketch_model.xlsx
model/pipeline/: cm.c  cm.h  meson.build  simple_fwd.c  simple_fwd.h  simple_fwd_control.c  simple_fwd_control.h  simple_fwd_ft.c  simple_fwd_ft.h  (+7 more)
(+333 files in other folders)
